# cookiecutter-yaccp

./: .pre-commit-config.yaml  LICENSE  README.md  cookiecutter.json  pyproject.toml  tox.ini
hooks/: post_gen_project.py  pre_gen_project.py  pre_prompt.py
src/yaccp/: __init__.py  utils.py
{{ cookiecutter.repo_name }}/: .gitignore  LICENSE  README.md  pyproject.toml
{{ cookiecutter.repo_name }}/.github/workflows/: tests.yml
