[tool.black]
line-length = 88

[tool.isort]
profile = "black"

[tool.poetry]
name = "yaccp"
version = "0.1.0"
description = "Yet another cookiecutter template for Data Science."
authors = ["Cédrick-Armel Yebouet"]
license = "MIT license"
readme = "README.md"
packages = [{ include = "yaccp", from = "src" }]

[tool.poetry.dependencies]
python = "^3.12"
colorlog = "^6.8.2"
cookiecutter = "^2.6.0"


[tool.poetry.group.dev.dependencies]
black = "^24.8.0"
isort = "^5.13.2"
mypy = "^1.11.2"
flake8 = "^7.1.1"
pre-commit = "^3.8.0"
pylint = "^3.2.7"


[tool.pylint.format]
max-line-length = "88"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
