[tool.black]
line-length = 88

[tool.isort]
profile = "black"

[tool.poetry]
{% if cookiecutter.license != 'No license file' %}license = "LICENSE"{% endif %}
name = "{{ cookiecutter.package_name }}"
version = "0.1.0"
description = "{{ cookiecutter.description }}"
authors = ["{{ cookiecutter.author }} <{{ cookiecutter.email }}>"]
readme = "README.md"
packages = [{ include = "{{ cookiecutter.package_name }}", from = "src" }]

[tool.poetry.dependencies]
python = "{{ cookiecutter.python_version }}"

[tool.poetry.group.dev.dependencies]
jupyter = "^1.1.1"
mypy = "^1.11.2"
flake8 = "^7.1.1"
pylint = "^3.2.7"
black = "^24.8.0"
isort = "^5.13.2"
pytest = "^8.3.2"
pre-commit = "^3.8.0"
tox = "^4.18.0"
tox-gh-actions = "^3.2.0"

[tool.pylint.format]
max-line-length = "88"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
